--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ECOM Demo</string>
+
+    <string name="lbl_home_str">Home Product Listing</string>
 </resources>
