--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">ECOM Demo</string>
 
     <string name="lbl_home_str">Home Product Listing</string>
+
+    <string name="something_went_wrong_str">Something went wrong...</string>
+    <string name="txt_retry_subheading_str">An alien is probably blocking your signal.</string>
+    <string name="message_no_network_connected_str">No Internet Available</string>
 </resources>
